--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,13 +15,18 @@ body {
     background-color: #2d2d2e;;
 }
 
-.userRow{
+#userRow{
+    display: flex;
+    font-size: 50px;
+    font-weight: bold;
     border-style: solid;
     border-color: black;
     background-color: grey;
     width: 370px;
     height: 100px;
     margin: 10px;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .row1, .row2, .row3,
